--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -9,12 +9,13 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="88dp"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
             <RelativeLayout
@@ -26,13 +27,12 @@
                     android:id="@+id/tvTootBarTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
+                    android:gravity="top"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginStart="5dp"
                     android:textColor="@color/colorRow"
-
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -40,6 +40,7 @@
                     android:id="@+id/logoXmarks"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:visibility="gone"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="10dp"
                     android:layout_centerVertical="true"
@@ -47,14 +48,15 @@
                     android:src="@drawable/logoicon" />
                 <ImageView
                     android:id="@+id/ivBack"
-                    android:layout_width="30dp"
-                    android:layout_height="24dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:gravity="top"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="10dp"
                     android:onClick="closeScreen"
                     android:layout_marginEnd="10dp"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/backarrow" />
+                    app:srcCompat="@drawable/ic_logo" />
 
 
             </RelativeLayout>
