--- a/app/src/main/res/drawable/corner.xml
+++ b/app/src/main/res/drawable/corner.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="#216C9F"/>
             <corners android:radius="10dp" />
             <stroke
-                android:width="2dp"
+                android:width="5dp"
                 android:color="@color/colorRow"
                 />
         </shape>
