--- a/app/src/main/res/layout/addjobdialog.xml
+++ b/app/src/main/res/layout/addjobdialog.xml
@@ -1,84 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_root"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="280dp"
+    android:layout_height="wrap_content"
+    android:layoutDirection="rtl"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:padding="23dp">
 
     <TextView
         android:id="@+id/edt_roomName"
-        android:text="اختار الوظيفة "
+        android:layout_width="113dp"
         android:inputType="text"
-        android:layout_width="match_parent"
+        android:layout_height="28dp"
         android:layout_marginTop="5dp"
-        android:textSize="16sp"
-        android:textColor="#000"
-        android:layout_height="wrap_content" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinnerJobs"
-        android:layout_margin="10dp"
-        />
+        android:text="أضافة وظيفة"
+        android:textColor="#000000"
+        android:textSize="20dp" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="69dp"
+        android:layout_height="18dp"
         android:layout_marginTop="5dp"
-         android:text="العدد:"
-        android:textColor="#000" />
+        android:inputType="text"
+        android:text="اختار وظيفة"
+        android:textColor="#131313"
+        android:textSize="13dp" />
+
+    <Spinner
+        android:layout_width="233dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerJobs" />
+
     <EditText
         android:id="@+id/edt_roomCount"
         android:hint="العدد"
-        android:layout_width="match_parent"
-        android:background="@drawable/editback"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_width="233dp"
+        android:layout_height="40dp"
         android:inputType="number"
         />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="ملاحظات:"
-        android:textColor="#000" />
+
     <EditText
         android:id="@+id/edt_job_note"
         android:hint="ملاحظات"
-        android:layout_width="match_parent"
-        android:background="@drawable/editback"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_width="233dp"
+        android:layout_height="110dp"
         android:inputType="text"
-
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="233dp"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_height="60dp">
 
+        <Button
+            android:id="@+id/button_add_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:textColor="#fff"
+            android:background="@drawable/nextbtn"
+            android:paddingLeft="10dp"
+            android:text="حفظ" />
 
         <Button
             android:id="@+id/button_cancel_dialog"
             android:text="الغاء"
             android:layout_weight="1"
-            android:background="@drawable/corner_gray"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:background="#fff"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
 
-        <Button
-            android:id="@+id/button_add_dialog"
-            android:text="اضافة"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/corner_gray"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </LinearLayout>
