--- a/app/src/main/res/layout/positionitemcolored.xml
+++ b/app/src/main/res/layout/positionitemcolored.xml
@@ -1,46 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:background="@color/colorRow"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:background="#fff"
     android:layout_width="match_parent"
-    android:weightSum="4"
-    android:layout_height="@dimen/row_height">
+    android:layoutDirection="rtl"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+    <LinearLayout
+        android:layout_width="460dp"
+        android:layout_weight="0.9"
+        android:layout_height="wrap_content"
+        android:layoutDirection="rtl"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="match_parent"
         android:id="@+id/tvjobTitle"
-        android:layout_marginStart="@dimen/margin"
-        android:gravity="center|start"
-        android:textAlignment="center"
+            android:layout_height="40dp"
+            android:padding="7dp"
+            android:text="كاتب العدل "
         android:textColor="@color/colorPrimaryText"
-        android:layout_height="match_parent"/>
+            android:textSize="20dp" />
 
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:id="@+id/tvNumInJob"
-        android:layout_marginStart="@dimen/margin"
-        android:gravity="center|start"
-        android:textAlignment="center"
+        android:layout_height="40dp"
+        android:padding="7dp"
         android:textColor="@color/colorSecondaryText"
-        android:layout_height="match_parent"/>
+        android:text="العدد(3)" />
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:id="@+id/tvJobNotes"
-        android:layout_marginStart="@dimen/margin"
-        android:gravity="center|start"
-        android:textAlignment="center"
+        android:layout_height="60dp"
+        android:padding="7dp"
         android:textColor="@color/colorSecondaryText"
-        android:layout_height="match_parent"/>
+        android:text="بلتنيب تابلا نبللاابلا ةنيبلانميبلابانىبللااةتبلؤلا ةبلىانبلةلاابلىبلىانمبللااةلنتىلاةللاانمبلىانلا بلةانم" />
 
 
     <ImageView
         android:id="@+id/ivDelete"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="24dp"
+        android:visibility="gone"
         android:layout_weight=".5"
         android:src="@drawable/delete"
         android:layout_gravity="center_vertical"
@@ -49,11 +55,21 @@
 
         />
     <ImageView
+        android:layout_width="match_parent"
         android:id="@+id/ivEdit"
-        android:layout_width="0dp"
+        android:visibility="gone"
         android:layout_height="24dp"
         android:layout_weight=".5"
         android:src="@drawable/edit"
         android:layout_gravity="center_vertical"
         />
+    </LinearLayout>
+
+    <CheckBox
+        android:layout_width="17dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
+        android:layout_weight="0.1"
+        android:gravity="center" />
 </LinearLayout>
