--- a/app/src/main/res/layout/roomitemcolored.xml
+++ b/app/src/main/res/layout/roomitemcolored.xml
@@ -1,59 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:background="@color/colorRow"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/row_height"
-    android:weightSum="4"
-    >
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_height="wrap_content"
+android:background="#fff"
+android:layout_width="match_parent"
+android:layoutDirection="rtl"
+android:orientation="horizontal"
+android:padding="10dp">
+
+<LinearLayout
+    android:layout_width="460dp"
+    android:layout_weight="0.9"
+    android:layout_height="wrap_content"
+    android:layoutDirection="rtl"
+    android:orientation="vertical">
+
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:id="@+id/tvRoomName"
-        android:layout_marginStart="@dimen/margin"
-        android:gravity="center|start"
-        android:textAlignment="center"
+        android:layout_height="40dp"
+        android:padding="7dp"
+        android:text="كاتب العدل "
         android:textColor="@color/colorPrimaryText"
-        android:layout_height="match_parent"/>
+        android:textSize="20dp" />
 
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:id="@+id/tvRoomNums"
-        android:layout_marginStart="@dimen/margin"
-        android:gravity="center|start"
-        android:textAlignment="center"
+        android:layout_height="40dp"
+        android:padding="7dp"
         android:textColor="@color/colorSecondaryText"
-        android:layout_height="match_parent"/>
-
+        android:text="العدد(3)" />
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:id="@+id/tvRoomsThings"
-        android:layout_marginStart="@dimen/margin"
-        android:textAlignment="center"
-        android:visibility="gone"
-        android:gravity="center|start"
-        android:textColor="@color/colorSecondaryText"
-        android:layout_height="match_parent"/>
-    <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:id="@+id/tvRoomsfer"
-        android:layout_marginStart="@dimen/margin"
-        android:textAlignment="center"
-        android:gravity="center|start"
-
+        android:layout_height="60dp"
+        android:padding="7dp"
         android:textColor="@color/colorSecondaryText"
-        android:layout_height="match_parent"/>
+        android:text="بلتنيب تابلا نبللاابلا ةنيبلانميبلابانىبللااةتبلؤلا ةبلىانبلةلاابلىبلىانمبللااةلنتىلاةللاانمبلىانلا بلةانم" />
 
 
     <ImageView
         android:id="@+id/ivDelete"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="24dp"
+        android:visibility="gone"
         android:layout_weight=".5"
         android:src="@drawable/delete"
         android:layout_gravity="center_vertical"
@@ -62,13 +55,98 @@
 
         />
     <ImageView
+        android:layout_width="match_parent"
         android:id="@+id/ivEdit"
-        android:layout_width="0dp"
+        android:visibility="gone"
         android:layout_height="24dp"
         android:layout_weight=".5"
         android:src="@drawable/edit"
         android:layout_gravity="center_vertical"
         />
-
-
 </LinearLayout>
+
+<CheckBox
+    android:layout_width="17dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginRight="20dp"
+    android:layout_weight="0.1"
+    android:gravity="center" />
+</LinearLayout>
+
+
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:orientation="horizontal"-->
+<!--android:background="@color/colorRow"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="@dimen/row_height"-->
+<!--android:weightSum="4"-->
+    <!--&gt;-->
+
+<!--<TextView-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_weight="1"-->
+    <!--android:id="@+id/tvRoomName"-->
+    <!--android:layout_marginStart="@dimen/margin"-->
+    <!--android:gravity="center|start"-->
+    <!--android:textAlignment="center"-->
+    <!--android:textColor="@color/colorPrimaryText"-->
+    <!--android:layout_height="match_parent"/>-->
+
+
+<!--<TextView-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_weight="1"-->
+    <!--android:id="@+id/tvRoomNums"-->
+    <!--android:layout_marginStart="@dimen/margin"-->
+    <!--android:gravity="center|start"-->
+    <!--android:textAlignment="center"-->
+    <!--android:textColor="@color/colorSecondaryText"-->
+    <!--android:layout_height="match_parent"/>-->
+
+<!--<TextView-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_weight="1"-->
+    <!--android:id="@+id/tvRoomsThings"-->
+    <!--android:layout_marginStart="@dimen/margin"-->
+    <!--android:textAlignment="center"-->
+    <!--android:visibility="gone"-->
+    <!--android:gravity="center|start"-->
+    <!--android:textColor="@color/colorSecondaryText"-->
+    <!--android:layout_height="match_parent"/>-->
+<!--<TextView-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_weight="1"-->
+    <!--android:id="@+id/tvRoomsfer"-->
+    <!--android:layout_marginStart="@dimen/margin"-->
+    <!--android:textAlignment="center"-->
+    <!--android:gravity="center|start"-->
+
+    <!--android:textColor="@color/colorSecondaryText"-->
+    <!--android:layout_height="match_parent"/>-->
+
+
+<!--<ImageView-->
+    <!--android:id="@+id/ivDelete"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="24dp"-->
+    <!--android:layout_weight=".5"-->
+    <!--android:src="@drawable/delete"-->
+    <!--android:layout_gravity="center_vertical"-->
+    <!--android:layout_marginEnd="10dp"-->
+    <!--android:layout_marginStart="10dp"-->
+
+    <!--/>-->
+<!--<ImageView-->
+    <!--android:id="@+id/ivEdit"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="24dp"-->
+    <!--android:layout_weight=".5"-->
+    <!--android:src="@drawable/edit"-->
+    <!--android:layout_gravity="center_vertical"-->
+    <!--/>-->
+
+
+<!--</LinearLayout>-->
