--- a/app/src/main/res/menu/addroommenu.xml
+++ b/app/src/main/res/menu/addroommenu.xml
@@ -6,7 +6,7 @@
     <item  android:id="@+id/action_add"
         android:icon="@drawable/ic_add_room"
         app:showAsAction="always"
-        
+        android:visible="true"
         android:title="اضافة غرفة"/>
 
 </menu>
