--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorRow">#E5E6EC</color>
     <color name="gray">#58585B</color>
     <color name="opengray">#B7B9BB</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlue">#05558C</color>
 </resources>
