--- a/app/src/main/res/layout/activity_new_ui_survey_screen.xml
+++ b/app/src/main/res/layout/activity_new_ui_survey_screen.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:layoutDirection="rtl"
+    tools:openDrawer="start">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include
+            layout="@layout/app_bar_home"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
 <ScrollView
+    android:layout_marginTop="90dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +30,8 @@
 
     >
 <RelativeLayout
+    android:layout_marginTop="10dp"
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,8 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
-        app:ms_hint="المحافظة"
-        app:ms_text_size="25dp" />
+          />
 
     <Spinner
         android:layout_marginTop="20dp"
@@ -37,8 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="400dp"
         android:layout_marginBottom="8dp"
-        app:ms_hint="المدينة"
-        app:ms_text_size="25dp" />
+        />
 
 
     <ImageView
@@ -58,8 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="8dp"
-        app:ms_hint="الحي"
-        app:ms_text_size="25dp" />
+         />
 
     <ImageView
         android:id="@+id/imageView_add_new_district"
@@ -78,8 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="8dp"
-        app:ms_hint="اسم المكتب"
-        app:ms_text_size="25dp" />
+        />
 
 
     <EditText
@@ -491,6 +510,7 @@
 
 
     <RelativeLayout
+        android:layout_marginBottom="1dp"
         android:id="@+id/linear_next_click"
         android:layout_marginTop="1200dp"
         android:background="@color/colorBlue"
@@ -517,3 +537,16 @@
     </RelativeLayout>
 </RelativeLayout>
     </ScrollView>
+    </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:layoutDirection="rtl"
+        android:fitsSystemWindows="true"
+
+        app:headerLayout="@layout/nav_header_home"
+        app:menu="@menu/activity_home_drawer" />
+</android.support.v4.widget.DrawerLayout>
