--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#05558C</color>
+    <color name="colorPrimaryDark">#05558C</color>
+    <color name="colorAccent">#05558C</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="colorDivider">#BDBDBD</color>
@@ -11,4 +11,6 @@
     <color name="opengray">#B7B9BB</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlue">#05558C</color>
+    <color name="colorRed">#D81B60</color>
+
 </resources>
